libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__ident__tests__symbol_with_whitespace.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/ident.rs
description: Symbol with internal whitespace in backticks
expression: "`+ +`"
info:
  kind: Err
---
`+ +`
  ^
invalid identifier
expected '`'
