libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__ident__tests__unicode_combining_marks.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/ident.rs
description: Identifier with multiple combining marks
expression: ạ̈
info:
  kind: Ok
---
Ident {
    span: SpanId(
        1,
    ),
    name: Symbol(
        "ạ\u{308}",
    ),
    kind: Lexical,
}
