libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__ident__tests__unicode_homoglyphs.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/ident.rs
description: "Identifier with Cyrillic 'р' instead of Latin 'p'"
expression: рaypal
info:
  kind: Ok
---
Ident {
    span: SpanId(
        1,
    ),
    value: Symbol(
        "рaypal",
    ),
    kind: Lexical,
}
