libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__ident__tests__unicode_japanese.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/ident.rs
description: Japanese Unicode identifier
expression: こんにちは
info:
  kind: Ok
---
Ident {
    span: SpanId(
        1,
    ),
    name: Symbol(
        "こんにちは",
    ),
    kind: Lexical,
}
