libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__ident__tests__unicode_mixed.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/ident.rs
description: Mixed ASCII and Unicode identifier
expression: hello世界
info:
  kind: Ok
---
Ident {
    span: SpanId(
        1,
    ),
    name: Symbol(
        "hello世界",
    ),
    kind: Lexical,
}
