libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__ident__tests__unicode_normalization_nfd.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/ident.rs
description: Character with combining diaeresis (NFD)
expression: ä
info:
  kind: Ok
---
Ident {
    span: SpanId(
        1,
    ),
    value: Symbol(
        "ä",
    ),
    kind: Lexical,
}
