libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__ident__tests__unicode_precomposed.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/ident.rs
description: Identifier with precomposed character
expression: café
info:
  kind: Ok
---
Ident {
    span: SpanId(
        1,
    ),
    name: Symbol(
        "café",
    ),
    kind: Lexical,
}
