libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__ident__tests__unicode_with_emoji.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/ident.rs
description: Identifier with emoji
expression: x☺
info:
  kind: Err
---
x☺
 ^
