libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__ident__tests__url_http.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/ident.rs
description: Basic HTTP URL
expression: "`http://example.com/`"
info:
  kind: Ok
---
Ident {
    span: SpanId(
        1,
    ),
    name: Symbol(
        "http://example.com/",
    ),
    kind: BaseUrl,
}
